// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`An instance of EventsButton matches the snapshot while hovering 1`] = `
<a
  aria-describedby={null}
  className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat MuiButton-colorInherit"
  href="/events"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
  title=""
>
  <span
    className="MuiButton-label"
  >
    TEST_EVENTS_LABEL_2
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</a>
`;

exports[`An instance of EventsButton matches the snapshot with Event 1`] = `
<a
  aria-describedby={null}
  className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat MuiButton-colorInherit"
  href="/events"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
  title="August 27 🎉Meetup🎉 MyEvent"
>
  <span
    className="MuiButton-label"
  >
    TEST_EVENTS_LABEL_2
    <span
      className=" null"
    >
       ●
    </span>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</a>
`;

exports[`An instance of EventsButton matches the snapshot without Event 1`] = `
<a
  aria-describedby={null}
  className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat MuiButton-colorInherit"
  href="/events"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
  title=""
>
  <span
    className="MuiButton-label"
  >
    TEST_EVENTS_LABEL_2
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</a>
`;
